--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer>
-        <p>Site Re-Criado por&nbsp;<strong><a href="https://github.com/Jefferson-BR">Jefferson Barbosa</a></strong>&nbsp;com o auxilio do profº<strong>&nbsp;<a href="https://github.com/gustavoguanabara" target="_blank" rel="author">Gustavo Guanabara</a> -&nbsp;</strong><a href="https://www.youtube.com/c/CursoemVideo" target="_blank" rel="author"> Curso em Video</p>
+        <p>Site criado por&nbsp;<strong><a href="https://github.com/Jefferson-BR">Jefferson Barbosa</a></strong>&nbsp;com o auxilio do profº<strong>&nbsp;<a href="https://github.com/gustavoguanabara" target="_blank" rel="author">Gustavo Guanabara</a> -&nbsp;</strong><a href="https://www.youtube.com/c/CursoemVideo" target="_blank" rel="author"> Curso em Video</p>
     </footer> 
 </body>
 </html>
